@@ -54,12 +54,8 @@ abstract class BootloaderOsAbstraction
 {
     // procrun expects options to come with '=' and not like separate options
     private static final List<String> JVM_ADD_OPENS = List.of(
-            "--add-opens=java.base/java.lang=ALL-UNNAMED",
             "--add-opens=java.base/java.nio=ALL-UNNAMED",
             "--add-opens=java.base/java.io=ALL-UNNAMED",
-            "--add-opens=java.base/java.util=ALL-UNNAMED",
-            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-            "--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED",
             "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
     );
 
